# strideweave

./: .clang-format  .gitignore  .jscpd.json  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  INVARIANTS.md  README.md  SECURITY.md  package-lock.json  package.json  pyproject.toml  skills-lock.json
.agents/skills/dry-refactoring/: SKILL.md
.agents/skills/jscpd/: SKILL.md
.beads/: config.yaml  metadata.json
.github/workflows/: ci.yml
examples/: train_mlp_cpu.py  train_mlp_cpu_friendly.py
src/neotorch/: __init__.py  _cpu.cpp  _cpu_data.hpp  _cpu_operation.hpp  _data.cpp  _data.hpp  _data.pyi  _einops.cpp  _einops.pyi  _functional.py  _generic_ops.py  _index.cpp  _index.pyi  _layout_index.hpp  _move.pyi  _operation.cpp  _operation.hpp  _operation.pyi  _operation_helpers.py  _tensor.cpp  _tensor.pyi  data.py  data.pyi  einops.py  einops.pyi  layout.py  module.py  module.pyi  operation.py  operation.pyi  tensor.py
src/neotorch/core/: __init__.py  layout.py  module.py  tensor.py  tensor.pyi
src/neotorch/core/native/: _data.cpp  _data.hpp  _index.cpp  _layout_index.hpp  _operation.cpp  _operation.hpp  _tensor.cpp
src/neotorch/data/: __init__.py  __init__.pyi  base.py  base.pyi  dtype.py  dtype.pyi  operation_helpers.py  shared_ops.py
src/neotorch/data/cpu/: __init__.py  __init__.pyi  data.py  data.pyi
src/neotorch/data/cpu/native/: _cpu.cpp  _cpu_data.hpp
src/neotorch/data/evictable/: __init__.py  __init__.pyi  data.py  data.pyi  ops.py
src/neotorch/data/file_backed/: __init__.py  __init__.pyi  data.py  data.pyi
src/neotorch/data/generic/: __init__.py  __init__.pyi  data.py  data.pyi  helpers.py  ops.py
src/neotorch/data/move/: __init__.py  ops.py
src/neotorch/data/move/native/: _move.cpp
src/neotorch/einops/: __init__.py  __init__.pyi
src/neotorch/einops/native/: _einops.cpp
src/neotorch/friendly/: __init__.py  creation.py  layouts.py  ops.py
src/neotorch/functional/: __init__.py  api.py
src/neotorch/nn/: __init__.py  init.py  modules.py  optim.py
src/strideweave/: __init__.py  _carrier.pyi  _operation.pyi  _tensor.pyi  layout.py  module.py  module.pyi  operation.py  operation.pyi  profiling.py  tensor.py  tensor.pyi
src/strideweave/carriers/: __init__.py  __init__.pyi  base.py  base.pyi  dtype.py  dtype.pyi  operation_helpers.py  shared_ops.py
src/strideweave/carriers/cpu/: __init__.py  __init__.pyi  carrier.py  carrier.pyi
src/strideweave/carriers/cpu/native/: _cpu.cpp  _cpu_carrier.hpp  _cpu_operation.hpp
src/strideweave/carriers/evictable/: __init__.py  __init__.pyi  carrier.py  carrier.pyi  ops.py  ops.pyi
src/strideweave/carriers/file_backed/: __init__.py  __init__.pyi  carrier.py  carrier.pyi
src/strideweave/carriers/generic/: __init__.py  __init__.pyi  carrier.py  carrier.pyi  helpers.py  ops.py
src/strideweave/carriers/move/: __init__.py  ops.py
src/strideweave/carriers/move/native/: _move.cpp
src/strideweave/core/: __init__.py  layout.py  module.py  tensor.py
src/strideweave/core/native/: _carrier.cpp  _carrier.hpp  _index.cpp  _layout_index.hpp  _operation.cpp  _operation.hpp  _tensor.cpp
src/strideweave/einops/: __init__.py  __init__.pyi
src/strideweave/einops/native/: _einops.cpp
src/strideweave/friendly/: __init__.py  creation.py  layouts.py  ops.py
src/strideweave/functional/: api.py
src/strideweave/nn/: __init__.py  init.py  modules.py  optim.py
tests/: test_activations.py  test_carrier.py  test_cpu.py  test_data.py  test_dlpack.py  test_docstrings.py  test_einops.py  test_evictable.py  test_examples.py  test_file_backed.py  test_friendly.py  test_layout.py  test_lint_invariants.py  test_module.py  test_move.py  test_nn.py  test_operation.py  test_profiler.py  test_profiler_native.py  test_tensor.py
tools/: lint_invariants.py
