[project]
name = "strideweave"
version = "0.1.0"
description = "Hierarchical-layout tensor and autograd research framework"
readme = "README.md"
authors = [
    { name = "Patrick Krusiec", email = "patrick.krusiec@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "numpy>=2.0",
    "pyright>=1.1.407",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
    "torch~=2.6.0",
]

[build-system]
requires = ["scikit-build-core>=0.11", "pybind11>=2.13"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
wheel.packages = ["src/strideweave"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["strideweave"]
