[project]
name = "strideweave"
version = "0.1.0"
description = "Hierarchical-layout tensor and autograd research framework"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Patrick Krusiec", email = "patrick.krusiec@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/patrickk1998/strideweave"
Issues = "https://github.com/patrickk1998/strideweave/issues"
Repository = "https://github.com/patrickk1998/strideweave.git"

[dependency-groups]
dev = [
    "numpy>=2.0",
    "pyright>=1.1.407",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
    "torch~=2.6.0",
]

[build-system]
requires = ["scikit-build-core>=0.11", "pybind11>=2.13"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
wheel.packages = ["src/strideweave"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["strideweave"]

[tool.uv]
required-version = ">=0.8.5"
